slurm-4548783.out
Traceback (most recent call last):
  File "/project/p_gnn001/code/tsp/tsp/train2.py", line 21, in <module>
    from gnngls import models, datasets, algorithms
  File "/project/p_gnn001/code/tsp/tsp/gnngls/models.py", line 276
    if 
       ^
SyntaxError: invalid syntax
